--- a/src/main/resources/admin.vm
+++ b/src/main/resources/admin.vm
@@ -38,156 +38,16 @@
             <h3>GitHub</h3>
             <fieldset>
                 <div class="field-group">
-                    <label for="github_id">Client ID<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="github_id" name="github_id" title="github_id">
+                    <label for="github_token">Personal API Token<span class="aui-icon icon-required"> required</span></label>
+                    <input class="text" type="text" id="github_token" name="github_token" title="github_token">
+                    <div class="description">Create a <a href="https://github.com/blog/1509-personal-api-tokens">token</a> with "admin:org" scope.</div>
                 </div>
                 <div class="field-group">
-                    <label for="github_secret">Client Secret<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="github_secret" name="github_secret" title="github_secret">
+                    <label for="github_organization">Organization<span class="aui-icon icon-required"> required</span></label>
+                    <input class="text" type="text" id="github_organization" name="github_organization" title="github_organization">
                 </div>
             </fieldset>
             <div id="teams"></div>
-            #*
-            <h3>Catroid</h3>
-            <fieldset>
-                <div class="field-group">
-                    <label for="github-teams">GitHub Teams</label>
-                    <input class="text" type="text" id="teams-catroid" name="github-teams">
-                    <div class="description">User gets added to those comma separated teams.</div>
-                </div>
-                <div class="field-group">
-                    <label for="membership-catroid-developer">Developer<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="membership-catroid-developer" name="membership-catroid" title="membership-catroid">
-                    <div class="description">User gets added to those comma separated groups.</div>
-                </div>
-                <div class="field-group">
-                    <label for="membership-catroid-senior">Senior<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="membership-catroid-senior" name="membership-catroid" title="membership-catroid">
-                    <div class="description">User gets added to those comma separated groups.</div>
-                </div>
-                <div class="field-group">
-                    <label for="membership-catroid-coordinator">Coordinator<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="membership-catroid-coordinator" name="membership-catroid" title="membership-catroid">
-                    <div class="description">User gets added to those comma separated groups.</div>
-                </div>
-            </fieldset>
-
-            <h4>Coordinator</h4>
-            <fieldset>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-            <h4>Senior</h4>
-            <fieldset>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-            <h4>Developer</h4>
-            <fieldset>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-
-            <h3>Paintroid</h3>
-            <h4>Coordinator</h4>
-            <fieldset>
-                <div class="field-group">
-                    <label for="github-teams">GitHub Teams</label>
-                    <input class="text" type="text" id="github-teams" name="github-teams">
-                    <div class="description">User gets added to those comma separated teams.</div>
-                </div>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-            <h4>Senior</h4>
-            <fieldset>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-            <h4>Developer</h4>
-            <fieldset>
-                <legend><span>Dropdowns and multi select</span></legend>
-                <div class="field-group">
-                    <label for="multiselect">Modify group membership</label>
-                    <select class="multi-select" size="4" multiple="multiple" id="multiselect" name="multiselect">
-                        <option>Catroid</option>
-                        <option>Catroid-Coordinators</option>
-                        <option>Catroid-Seniors</option>
-                        <option>Catroweb</option>
-                        <option>Catroweb-Coordinators</option>
-                        <option>Catroweb-Seniors</option>
-                        <option>Paintroid</option>
-                        <option>Paintroid-Coordinators</option>
-                        <option>Paintroid-Seniors</option>
-                    </select>
-                </div>
-            </fieldset>
-            *#
             <div class="field-group">
                 <input type="submit" value="Save" class="aui-button aui-button-primary">
             </div>
