--- a/src/main/resources/hardware_overview.vm
+++ b/src/main/resources/hardware_overview.vm
@@ -23,119 +23,277 @@
 </head>
 <body>
 <div class="aui-tabs horizontal-tabs" id="tabs-example1">
-    <ul class="tabs-menu">
-        <li class="menu-item active-tab">
-            <a href="#tabs-example-first"><strong>Overview</strong></a>
-        </li>
-        <li class="menu-item">
-            <a href="#tabs-example-second"><strong>Lended Out</strong></a>
-        </li>
-        <li class="menu-item">
-            <a href="#tabs-example-third"><strong>Sorted Out</strong></a>
-        </li>
-    </ul>
-    <div class="tabs-pane active-pane" id="tabs-example-first">
-        <h3>Overview</h3>
-        <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
-            <thead>
-            <tr>
-                <th class="aui-table-column-issue-key">Name</th>
-                <th>Type of Device</th>
-                <th>OS</th>
-                <th>Available</th>
-                <th class="aui-table-column-unsortable">Lend Device Out</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><a href="#z">Nexus 7</a></td>
-                <td>Tablet</td>
-                <td>Android</td>
-                <td>7/15</td>
-                <td><a class="lending_out" href="#">Lending out</a></td>
-            </tr>
-            <tr>
-                <td><a href="#y">Nexus 4</a></td>
-                <td>Smartphone</td>
-                <td>Android</td>
-                <td>1/16</td>
-                <td><a class="lending_out" href="#">Lending out</a></td>
-            </tr>
-            </tbody>
-        </table>
+<ul class="tabs-menu">
+    <li class="menu-item active-tab">
+        <a href="#tabs-example-first"><strong>Overview</strong></a>
+    </li>
+    <li class="menu-item">
+        <a href="#tabs-example-second"><strong>Lended Out</strong></a>
+    </li>
+    <li class="menu-item">
+        <a href="#tabs-example-third"><strong>Sorted Out</strong></a>
+    </li>
+    <li class="menu-item">
+        <a href="#tabs-example-forth"><strong>Hardware Management</strong></a>
+    </li>
+</ul>
+<div class="tabs-pane active-pane" id="tabs-example-first">
+    <h3>Overview</h3>
+    <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
+        <thead>
+        <tr>
+            <th class="aui-table-column-issue-key">Name</th>
+            <th>Type of Device</th>
+            <th>OS</th>
+            <th>Available</th>
+            <th class="aui-table-column-unsortable">Lend Device Out</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Nexus 7</td>
+            <td>Tablet</td>
+            <td>Android</td>
+            <td>7/15</td>
+            <td><a class="lending_out" href="#">Lending out</a></td>
+        </tr>
+        <tr>
+            <td>Nexus 4</td>
+            <td>Smartphone</td>
+            <td>Android</td>
+            <td>1/16</td>
+            <td><a class="lending_out" href="#">Lending out</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="tabs-pane" id="tabs-example-second">
+    <h3>Lended Out</h3>
+    <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
+        <thead>
+        <tr>
+            <th class="aui-table-column-issue-key">Name</th>
+            <th>Serialnumber</th>
+            <th>IMEI</th>
+            <th>Inventorynumber</th>
+            <th>Lended out from</th>
+            <th>Lended out since</th>
+            <th class="aui-table-column-unsortable">Details</th>
+            <th class="aui-table-column-unsortable">Return Device</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Nexus 7</td>
+            <td>302KPRW062238</td>
+            <td>358240051927168</td>
+            <td>113676</td>
+            <td>Felly</td>
+            <td>2013-08-12</td>
+            <td><a class="device_details" href="#">Details</a></td>
+            <td><a class="device_return" href="#">Return</a></td>
+        </tr>
+        <tr>
+            <td>Nexus 4</td>
+            <td>302KPRW062238</td>
+            <td>358240051937910</td>
+            <td>113676</td>
+            <td>Felly</td>
+            <td>2014-08-12</td>
+            <td><a class="device_details" href="#">Details</a></td>
+            <td><a class="device_return" href="#">Return</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="tabs-pane" id="tabs-example-third">
+    <h3>Sorted Out</h3>
+    <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
+        <thead>
+        <tr>
+            <th class="aui-table-column-issue-key">Name</th>
+            <th>Serialnumber</th>
+            <th>IMEI</th>
+            <th>Inventorynumber</th>
+            <th>Sorted out since</th>
+            <th class="aui-table-column-unsortable">Details</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Nexus 7</td>
+            <td>302KPRW062238</td>
+            <td>358240051927168</td>
+            <td>113676</td>
+            <td>2014-08-12</td>
+            <td><a class="device_details" href="#z">Details</a></td>
+        </tr>
+        <tr>
+            <td>Nexus 4</td>
+            <td>302KPRW062238</td>
+            <td>358240051937910</td>
+            <td>113676</td>
+            <td>2014-08-12</td>
+            <td><a class="device_details" href="#z">Details</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="tabs-pane" id="tabs-example-forth">
+    <h3>Hardware Models</h3>
+    <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
+        <thead>
+        <tr>
+            <th class="aui-table-column-issue-key">Name</th>
+            <th>Type of Device</th>
+            <th>OS</th>
+            <th>Allocated Devices</th>
+            <th class="aui-table-column-unsortable">Edit</th>
+            <th class="aui-table-column-unsortable">Remove</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><a href="#z">Nexus 7</a></td>
+            <td>Tablet</td>
+            <td>Android</td>
+            <td>15</td>
+            <td><a class="edit_model" href="#">Edit</a></td>
+            <td><a class="remove_model" href="#">Remove</a></td>
+        </tr>
+        <tr>
+            <td><a href="#y">Nexus 4</a></td>
+            <td>Smartphone</td>
+            <td>Android</td>
+            <td>16</td>
+            <td><a class="edit_model" href="#">Edit</a></td>
+            <td><a class="remove_model" href="#">Remove</a></td>
+        </tr>
+        </tbody>
+    </table>
+    <p>
+        <input class="aui-button aui-button-primary" id="new_model" type="button" value="New Hardware Model"/>
+        <input class="aui-button" id="new_device" type="button" value="New Device"/>
+    </p>
+#*
+<form action="#" method="post" id="d" class="aui">
+    <h3>New Hardware Model</h3>
+    <fieldset>
+        <div class="field-group">
+            <label for="d-fname">Name<span class="aui-icon icon-required"> required</span></label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Name or short term for describing the hardware type</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Type of device</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Type of device class for better grouping</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Version</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">e.g. 8 GB/16 GB Version</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Price</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Producer</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Main Producer or brand</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Operating System</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Android/iOS/Windows Phone</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Item number</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Unique item number for product (e.g. GTIN)</div>
+        </div>
+    </fieldset>
+    <div class="buttons-container">
+        <div class="buttons">
+            <input class="button submit" type="submit" value="Create" id="d-save-btn1">
+            <a class="cancel" href="#">Cancel</a>
+        </div>
     </div>
-    <div class="tabs-pane" id="tabs-example-second">
-        <h3>Lended Out</h3>
-        <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
-            <thead>
-            <tr>
-                <th class="aui-table-column-issue-key">Name</th>
-                <th>Serialnumber</th>
-                <th>IMEI</th>
-                <th>Inventorynumber</th>
-                <th>Lended out from</th>
-                <th>Lended out since</th>
-                <th class="aui-table-column-unsortable">Details</th>
-                <th class="aui-table-column-unsortable">Return Device</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><a href="#z">Nexus 7</a></td>
-                <td>302KPRW062238</td>
-                <td>358240051927168</td>
-                <td>113676</td>
-                <td>Felly</td>
-                <td>2013-08-12</td>
-                <td><a class="device_details" href="#">Details</a></td>
-                <td><a class="device_return" href="#">Return</a></td>
-            </tr>
-            <tr>
-                <td><a href="#y">Nexus 4</a></td>
-                <td>302KPRW062238</td>
-                <td>358240051937910</td>
-                <td>113676</td>
-                <td>Felly</td>
-                <td>2014-08-12</td>
-                <td><a class="device_details" href="#">Details</a></td>
-                <td><a class="device_return" href="#">Return</a></td>
-            </tr>
-            </tbody>
-        </table>
+</form>
+
+<form action="#" method="post" id="d" class="aui">
+    <h3>New Device</h3>
+    <fieldset>
+        <div class="field-group">
+            <label for="dBase">Hardware Model<span class="aui-icon icon-required"> required</span></label>
+            <select class="select" id="dBase" name="dBase" title="database select">
+                <option>Select</option>
+                <option>Nexus 4</option>
+                <optgroup label="Group 1">
+                    <option>8 GB</option>
+                    <option>16 GB</option>
+                </optgroup>
+                <option>Nexus 7</option>
+            </select>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Serial number<span class="aui-icon icon-required"> required</span></label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Device unique number to identify the single device</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">IMEI</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Inventory number</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Received date</label>
+            <input class="text" type="date" id="date-picker" name="d-fname"/>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Received by</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Main Producer or brand</div>
+        </div>
+
+        <div class="field-group">
+            <label for="d-fname">Useful life of asset</label>
+            <input class="text" type="text" id="d-fname" name="d-fname" title="first name">
+
+            <div class="description">Amount of time when this device is obsolete</div>
+        </div>
+    </fieldset>
+    <div class="buttons-container">
+        <div class="buttons">
+            <input class="button submit" type="submit" value="Create" id="d-save-btn1">
+            <a class="cancel" href="#">Cancel</a>
+        </div>
     </div>
-    <div class="tabs-pane" id="tabs-example-third">
-        <h3>Sorted Out</h3>
-        <table id="mySortableTable" class="aui aui-table-interactive aui-table-sortable">
-            <thead>
-            <tr>
-                <th class="aui-table-column-issue-key">Name</th>
-                <th>Serialnumber</th>
-                <th>IMEI</th>
-                <th>Inventorynumber</th>
-                <th>Sorted out since</th>
-                <th class="aui-table-column-unsortable">Details</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><a href="#z">Nexus 7</a></td>
-                <td>302KPRW062238</td>
-                <td>358240051927168</td>
-                <td>113676</td>
-                <td>2014-08-12</td>
-                <td><a class="device_details" href="#z">Details</a></td>
-            </tr>
-            <tr>
-                <td><a href="#y">Nexus 4</a></td>
-                <td>302KPRW062238</td>
-                <td>358240051937910</td>
-                <td>113676</td>
-                <td>2014-08-12</td>
-                <td><a class="device_details" href="#z">Details</a></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+</form>
+*#
 </div>
 <!-- .aui-tabs -->
 </body>
