--- a/src/main/resources/admin.vm
+++ b/src/main/resources/admin.vm
@@ -35,18 +35,35 @@
     </ul>
     <div class="tabs-pane active-pane" id="tabs-general">
         <form id="general" class="aui">
-            <h3>GitHub</h3>
+            <!-- fake fields are a workaround for chrome autofill getting the wrong fields -->
+            <input style="display:none" type="text" name="fakeusernameremembered"/>
+            <input style="display:none" type="password" name="fakepasswordremembered"/>
+            <h2>Permission</h2>
             <fieldset>
                 <div class="field-group">
-                    <label for="github_token">Personal API Token<span class="aui-icon icon-required"> required</span></label>
-                    <input class="text" type="text" id="github_token" name="github_token" title="github_token">
-                    <div class="description">Create a <a href="https://github.com/blog/1509-personal-api-tokens">token</a> with "admin:org" scope.</div>
+                    <label for="plugin-permission">Allowed Groups/Users</label>
+                    <input class="text" type="text" id="plugin-permission" name="plugin-permission" title="plugin-permission">
+                    <div class="description">All jira administrators in these groups may see and manipulate this plugin</div>
                 </div>
+            </fieldset>
+            <h2>GitHub</h2>
+            <fieldset>
                 <div class="field-group">
                     <label for="github_organization">Organization<span class="aui-icon icon-required"> required</span></label>
                     <input class="text" type="text" id="github_organization" name="github_organization" title="github_organization">
                 </div>
+                <div class="field-group">
+                    <label for="github_token_public">Public API Token<span class="aui-icon icon-required"> required</span></label>
+                    <input class="text" type="text" id="github_token_public" name="github_token_public" title="github_token_public">
+                    <div class="description">Create a <a href="https://github.com/blog/1509-personal-api-tokens">token</a> <b>without any rights</b>. It is just used for searching users and will be visible within this plugin!</div>
+                </div>
+                <div class="field-group">
+                    <label for="github_token">Personal API Token<span class="aui-icon icon-required"> required</span></label>
+                    <input class="text" type="password" id="github_token" name="github_token" title="github_token">
+                    <div class="description">Create a <a href="https://github.com/blog/1509-personal-api-tokens">token</a> with "admin:org" scope.</div>
+                </div>
             </fieldset>
+            <h2>Team Configuration</h2>
             <div id="teams"></div>
             <div class="field-group">
                 <input type="submit" value="Save" class="aui-button aui-button-primary">
