--- a/src/main/resources/css/admin_helper.css
+++ b/src/main/resources/css/admin_helper.css
@@ -51,3 +51,10 @@ div.change-details {
 .tabs-pane form {
     padding-top: 15px;
 }
+
+.note {
+    color: #707070;
+    font-size: 12px;
+    line-height: 1.66666666666667;
+    margin: 5px 0 0 0;
+}
